@@ -164,13 +164,19 @@ parseFaxInfo()
 
 #
 # Produce mailable encoding for binary files.
-encode()
+mimeEncode()
 {
+    if [ ! -f "$1" ] ; then
+        return # cannot do much more without a file
+    fi
     if [ -x "$MIMENCODE" ]; then
 	$MIMENCODE < $1 2>$ERRORSTO
     elif [ -x "$UUENCODE" ]; then
 	if [ "$ENCODING" = "base64" ]; then
-	    $UUENCODE -m $1 $1 | grep -E -v "^begin|^====$" 2>$ERRORSTO
+	    $UUENCODE -m $1 $1 \
+	    	| $GREP -v "^begin" \
+		| $GREP -v "^====$" \
+		2>$ERRORSTO
 	else
 	    $UUENCODE $1 $1 | grep -E -v "^begin|^====$" 2>$ERRORSTO
 	fi
