@@ -412,31 +412,6 @@ putMimeImageTIFHeader()
     echo ""
 }
 
-mimeEncode()
-# out put a mime encoded form of the given file
-{
-    FILENAME=$1
-    if [ ! -f "$FILENAME" ] ; then
-        return # cannot do much more without a file
-    fi
-    if [ -x "$MIMENCODE" ]; then
-        $MIMENCODE < $FILENAME 2>$ERRORSTO
-    elif [ -x "$UUENCODE" ]; then
-        if [ "$ENCODING" = "base64" ]; then
-            $UUENCODE -m $FILENAME $FILENAME \
-	    	| $GREP -v "^begin" \
-		| $GREP -v "^====$" \
-		2>$ERRORSTO
-        else
-            $UUENCODE $FILENAME $FILENAME 2>$ERRORSTO
-        fi
-    else
-	# Do not use "-x" for backward compatibility; even if it fails
-	# this is last chance to encode data, so there's nothing to lose.
-	$MIMENCODE < $FILENAME 2>$ERRORSTO
-    fi
-}
-
 printItem()
 {
     FMT="`echo %$ITEMSIZE\s: $1`"
@@ -595,7 +570,6 @@ putHeaders()
 #export -f returnTranscript
 #export -f putMimeAppPDFHeader
 #export -f putMimeImageTIFHeader
-#export -f mimeEncode
 #export -f printItem
 #export -f putTifEncodedImage
 #export -f putMimeSetup
